modified:   personal.html

--- a/personal.html
+++ b/personal.html
@@ -49,7 +49,7 @@
 		<p align = "justify">
 			<table>
 				<tr valign=top>
-					<td colspan="2">
+					<td>
 						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2020-21:</u></i></span>
 						<ul>
 							<li> Advanced Calculus</a>
@@ -68,7 +68,7 @@
 				</tr>
 
 				<tr valign=top>
-					<td colspan="2">
+					<td>
 						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2021-22:</u></i></span>
 						<ul>
 							<li> Machine Learning Foundations and Applications</a>
@@ -85,7 +85,7 @@
 				</tr>
 
 				<tr valign=top>
-					<td colspan="2">
+					<td>
 						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2022-23:</u></i></span>
 						<ul>
 							<li> Matrix Structural Analysis</li>
@@ -96,6 +96,25 @@
 						<ul>
 							<li> Algorithms-I</a>
 							<li> Algorithms-I Laboratory</a>
+						</ul>
+					</td>
+				</tr>
+
+				<tr valign=top>
+					<td>
+						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2023-24 (Ongoing):</u></i></span>
+						<ul>
+							<li> Foundations of Computing Science</li>
+							<li> Ubiquitous Computing</a>
+							<li> Artificial Intelligence</a>
+							<li> Cryptography and Network Security</a>
+						</ul>
+					</td>
+					<td>
+						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Spring 2023-24 (Upcoming):</u></i></span>
+						<ul>
+							<li> </a>
+							<li> </a>
 						</ul>
 					</td>
 				</tr>
