modified:   cp.html 	modified:   gallery.html 	modified:   index.html 	modified:   personal.html

--- a/cp.html
+++ b/cp.html
@@ -32,7 +32,7 @@
 		</style>
 
 
-		<!-- <meta name="google-site-verification" content="9FopzfBz_vbqgEMi__ZA0vOkjBSa2fNhoz5dVIc_8lM" /> -->
+		<meta name="google-site-verification"/>
 		<h1 align = "center" style = "color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
 		<center style = "margin-top:-17px">
 			<font face = "IM Fell English" style = "font-size:20px" color = white>
@@ -51,34 +51,31 @@
 	<body bgcolor = #050513>
 		<br>
 		<p>
-			I am currently <span style="color:#03a89e!important;">Specialist</span> in <a href = "https://www.codeforces.com">Codeforces</a> [<a href = "https://codeforces.com/profile/ranveerraj">account</a>] and <span style="color:#684273;">4&#9733 coder</span> in <a href = "https://www.codecef.com">Codechef</a> [<a href = "https://www.codechef.com/users/ranveerraj">account</a>] 
-
+			I am currently <span style="color:#03a89e!important;">Specialist</span> in <a href = "https://www.codeforces.com">Codeforces</a> [<a href = "https://codeforces.com/profile/ranveerraj">account</a>] and <span style="color:#684273;">4&#9733 coder</span> in <a href = "https://www.codecef.com">Codechef</a> [<a href = "https://www.codechef.com/users/ranveerraj">account</a>]
+		</p>
 		<br>
 		<br>
 
-		<!-- <h2>Achievments</h2>
+		<h2>Research and Development Intern [A joint venture by <a href = "https://iitkgp.ac.in"> IIT Kharagpur</a>, <a href = "https://iisc.ac.in"> IISc</a> and <a href = "https://www.drdo.gov.in"> DRDO</a>]</h2>
+		<font style = "font-size:20px" color = white>
+			<h3>Under the guidance of <a href = "https://iitkgp.ac.in/department/CE/faculty/ce-abshaw"> Prof. Amit Shaw</a> </h3>
+		</font>
 		<p>
 		<ul>
-			<li> Qualified <span class = emph>Indian National Olympiad in Informatics (INOI)</span> and selected in Indian <span class = emph>International Olympiad in Informatics Training Camp (IOITC)</span> in 2019 and in 2020
-			<li> Secured <span class = emph>2nd Position</span> in <span class = emph>ICPC for Schools 2019</span>, <span class = emph>Amritapuri Regionals</span>
-			<li> Selected for Round 3 in <span class = emph>Google Code Jam 2021</span> among 37398 participants securing a <span class = emph>Global Rank of 418</span> with a <span class = emph>Country Rank of 5</span> in Round 2
-			<li> Selected for Round 3 in <span class = emph>Google Code Jam 2022</span> among 32702 participants securing a <span class = emph>Global Rank of 658</span> with a <span class = emph>Country Rank of 7</span> in Round 2
-			<li> Selected for Round 2 in <span class = emph>Facebook Hackercup 2021</span> securing a <span class = emph>Global Rank of 395</span> (among 34584 participants), leading to advancement in Round 3
-			<li> Selected for Round 2 in <span class = emph>Facebook Hackercup 2022</span> securing a <span class = emph>Global Rank of 749</span> (among 27604 participants)
-			<li> Regionalist in ICPC 2020 (held in 2021) securing ranks of <span class = emph>35</span> in <span class = emph>Amritapuri Regionals</span> and <span class = emph>80</span> in <span class = emph>Gwalior Regionals</span> [Team: Syntrepid]
-			<li> Best Global Ranks in <span class = emph>Google Kick Start</span> include 
-				<ul>
-					<li> <span class = emph>178</span> (2022 Round C, among 12425 participants)
-					<li> <span class = emph>109</span> (2021 Round A, among 19841 participants)
-					<li> <span class = emph>325</span> (2020 Round D, among 11704 participants)
-				</ul>
-			<li> <span class = emph>Country Rank 1</span> and <span class = emph>Global Rank 24</span> in <span class = emph>Codechef June Lunchtime 2022</span>
-			<li> <span class = emph>2189</span> rated in Codeforces with <span class = emph>global rank 1518</span> among 133,934 registered users
-			<li> <span class = emph>2351</span> rated in Codechef with <span class = emph>global rank 223</span> among 239,962 registered users
+			As an R&D Intern, I dedicated my efforts to harnessing the computational power of multi-core machines for scientific computing. Collaborating with a team of two, we embarked on pioneering enhancements in particle interaction simulations using the smooth particle hydrodynamics method.
+			<br><br>
+			My accomplishments include:
+			<ul>
+				<li>Achieving remarkable efficiency with 93% CPU utilization on an 8-core machine by implementing advanced parallel computing techniques, notably OpenMP, to parallelize C++ code.
+				<li>Reducing computation time by a factor of 4 compared to the sequential code by leveraging my parallel computing skills to optimize critical code segments.
+				<li>Conducted rigorous benchmarking, resulting in an impressive performance boost of 14.6x on a 32-core machine while meticulously documenting procedures to ensure seamless future maintenance.
+			</ul>
+			<br>
+			This experience allowed me to gain valuable insights into parallel computing and its applications in scientific research, emphasizing both innovation and practicality.	
 		</ul>
 		</p>
 		<br>
-		<br> -->
+		<br>
 
 		<!-- <h2>Authored Problems</h2>
 		<ul>
