--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</style>
 
 
-		<!-- <meta name="google-site-verification" content="9FopzfBz_vbqgEMi__ZA0vOkjBSa2fNhoz5dVIc_8lM" /> -->
+		<meta name="google-site-verification"/>
 		<h1 align = "center" style = "color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
 		<center style = "margin-top:-17px">
 			<font face = "IM Fell English" style = "font-size:20px" color = white>
@@ -53,9 +53,13 @@
 				<td width = 75% margin-left = 5% margin-right = 5%>
 
 					<p align = "justify"> 
-					I am a final year undergraduate student pursuing major in <a href = "https://en.wikipedia.org/wiki/Civil_engineering">Civil Engineering</a> and minor in <a href = "https://en.wikipedia.org/wiki/Computer_science_and_engineering">Computer Science and Engineering</a> at <a href = "https://www.iitkgp.ac.in/">Indian Institute of Technology Kharagpur</a>. 
+					I am a final-year undergraduate student pursuing a major in <a href = "https://en.wikipedia.org/wiki/Civil_engineering">Civil Engineering</a> and a minor in <a href = "https://en.wikipedia.org/wiki/Computer_science_and_engineering">Computer Science and Engineering</a> at <a href = "https://www.iitkgp.ac.in/">Indian Institute of Technology Kharagpur</a>.  My academic journey has been a fusion of engineering and technology, allowing me to explore a diverse range of subjects and interests.
 					<br> <br>
-					I am an active participant in <a href = "https://en.wikipedia.org/wiki/Competitive_programming"> Competitive Programming </a> [<a href = "cp.html">achievments & contributions</a>]. I am also fond of tricky math puzzles and brain teasers.
+					In addition to my academic pursuits, I am an active participant in <a href = "https://en.wikipedia.org/wiki/Competitive_programming"> Competitive Programming </a>, where I have honed my problem-solving and coding skills. This passion has led me to undertake challenging coding projects, demonstrating my commitment to the world of software development [<a href = "cp.html">Coding Portfolio</a>]. 
+					<br> <br>
+					Before embarking on my undergraduate journey, I completed my senior secondary education at <a href = "https://www.tpscollegepatna.org/">Thakur Prasad Singh College</a> in Patna. Prior to that, I received my foundational education at <a href = "https://dssbihta.com/">Digdarshan Secondary School</a>, also in Patna.
+					<br> <br>
+					My academic and extracurricular experiences have shaped me into a well-rounded individual with a passion for engineering, computer science, and the thrill of problem-solving. I am eager to continue my educational and professional journey, leveraging my diverse skill set to contribute to the ever-evolving fields of technology and engineering.
 					</p>
 				</td>
 				<td>
