--- a/personal.html
+++ b/personal.html
@@ -28,7 +28,7 @@
 		</style>
 
 
-		<!-- <meta name="google-site-verification" content="9FopzfBz_vbqgEMi__ZA0vOkjBSa2fNhoz5dVIc_8lM" /> -->
+		<meta name="google-site-verification"/>
 		<h1 align = "center" style = "color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
 		<center style = "margin-top:-17px">
 			<font face = "IM Fell English" style = "font-size:20px" color = white>
@@ -113,8 +113,9 @@
 					<td>
 						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Spring 2023-24 (Upcoming):</u></i></span>
 						<ul>
-							<li> </a>
-							<li> </a>
+							<li> Switching Circuit and Logic Design</a>
+							<li> Switching Circuit and Logic Design Laboratory</a>
+							<li> Computer Architecture and Operating System</a>
 						</ul>
 					</td>
 				</tr>
