modified:   cp.html 	modified:   index.html 	modified:   personal.html 	modified:   sitemap.xml

--- a/cp.html
+++ b/cp.html
@@ -47,16 +47,16 @@
 		<hr color = #44AA27>
 	</head>
 	<body bgcolor = #050513>
-		<br>
-		<p>
-			I am currently <span style="color:#03a89e!important;">Specialist</span> in <a href = "https://www.codeforces.com">Codeforces</a> [<a href = "https://codeforces.com/profile/ranveerraj">account</a>] and <span style="color:#684273;">4&#9733 coder</span> in <a href = "https://www.codecef.com">Codechef</a> [<a href = "https://www.codechef.com/users/ranveerraj">account</a>]
-		</p>
-		<br>
-		<br>
 
-		<h2>Research and Development Intern [A joint venture by <a href = "https://iitkgp.ac.in"> IIT Kharagpur</a>, <a href = "https://iisc.ac.in"> IISc</a> and <a href = "https://www.drdo.gov.in"> DRDO</a>]</h2>
+		<h2>Competitive Programming</h2>
+		<ul>
+			<li><span style="color:#03a89e!important;">Specialist</span> on <a href = "https://www.codeforces.com">Codeforces</a> [<a href = "https://codeforces.com/profile/ranveerraj">account</a>]</a>
+			<li><span style="color:#684273;">4&#9733 coder</span> on <a href = "https://www.codecef.com">Codechef</a> [<a href = "https://www.codechef.com/users/ranveerraj">account</a>]</a>
+		</ul>
+		<br>
+		<h2>Research and Development Intern</h2>
 		<font style = "font-size:20px" color = white>
-			<h3>Under the guidance of <a href = "https://iitkgp.ac.in/department/CE/faculty/ce-abshaw"> Prof. Amit Shaw</a> </h3>
+			<h3>A joint venture by <a href = "https://iitkgp.ac.in"> IIT Kharagpur</a>, <a href = "https://iisc.ac.in"> IISc</a> and <a href = "https://www.drdo.gov.in"> DRDO</a>&nbsp;&nbsp;|&nbsp;&nbsp;Under the guidance of <a href = "https://iitkgp.ac.in/department/CE/faculty/ce-abshaw"> Prof. Amit Shaw</a> </h3>
 		</font>
 		<p>
 		<ul>
@@ -73,45 +73,12 @@
 		</ul>
 		</p>
 		<br>
-		<br>
-
-		<!-- <h2>Authored Problems</h2>
-		<ul>
-			<li> <a href = "https://www.hackerrank.com/contests/codenite-2021-round-1/challenges/p-subustr">The Lock, The Tablet and The Scroll (CodeNite 2021 Round 1)</a>
-			<li> <a href = "https://www.hackerrank.com/contests/codenite-2021-round-2/challenges/evil-skiers">Evil Skiers (CodeNite 2021 Round 2)</a>
-			<li> <a href = "https://www.hackerrank.com/contests/codenite-2021-round-2/challenges/fib-tree">A KGPian's Dream (CodeNite 2021 Round 2)</a>
-			<li> <a href = "https://www.hackerrank.com/contests/freshers-codenite/challenges/codeclub-is-everywhere">CodeClub is Everywhere! (Fresher's CodeNite 2022)</a>
-			<li> <a href = "https://www.hackerrank.com/contests/freshers-codenite/challenges/permutation-prime">Permutation Prime (Fresher's CodeNite 2022)</a>
-			<li> <a href = "https://www.hackerrank.com/contests/freshers-codenite/challenges/the-tranquil-pyramid">The Tranquil Pyramid (Fresher's CodeNite 2022)</a>
-			<li> <a href = "https://www.codechef.com/MRCR2022/problems/EXPTTOLL">The Two Dear Friends of Chefland (CodeNite May 2022)</a>
-			<li> <a href = "https://www.codechef.com/MRCR2022/problems/JUMPSCORE">Hugsy and his Jumping Game (CodeNite May 2022)</a>
-			<li> <a href = "https://codeforces.com/contest/1726/problem/A">Mainak and Array (Codeforces Round #819, Problem A)</a>
-			<li> <a href = "https://codeforces.com/contest/1726/problem/B">Mainak and Interesting Sequence (Codeforces Round #819, Problem B)</a>
-			<li> <a href = "https://codeforces.com/contest/1726/problem/H">Mainak and the Bleeding Polygon (Codeforces Round #819, Problem H)</a>
-		</ul> -->
-
-		<br>
-		<br>
-
-		<!-- <h2>Lectures in GOC Div-3 Workshop 2022</h2>
-
-		<p>
-			I was one of the lecturers in the Grimoire of Code Div-3 Workshop 2022. The workshop was conducted with the aim of helping begginners and div-3 participants in competitive programming by organizing discussions on various topics. The complete video playlist can be found in the <a href = "https://www.youtube.com/channel/UCGK-BJDFezORdFAyLtKbKCA">Grimoire of Code Youtube Channel</a>. The lecture topics taken by me are:
-		</p>
-		<ul>
-			<li> Basics of Number Theory [ <a href = "https://youtu.be/0TkCDLlZWgs">part 1</a> | <a href = "https://youtu.be/5iZF_3xIc78">part 2</a> | <a href = "GoC_div3_workshop_scribes/number_theory.pdf">scribes</a> ]
-			<li> Greedy Algorithms [ <a href = "https://youtu.be/30IJVZm54ug">single part</a> | <a href = "GoC_div3_workshop_scribes/greedy.pdf">scribes</a> ]
-			<li> Problem Solving with STL Containers [ <a href = "https://youtu.be/_STDW0ffJhs">single part</a> | <a href = "GoC_div3_workshop_scribes/problem_solving_with_STL.pdf">scribes</a> ]
-			<li> Mathematical Properties and Structure of Graphs [ <a href = "https://youtu.be/f5sR3wHbZdc">single part</a> | <a href = "GoC_div3_workshop_scribes/graph_math.pdf">scribes</a> ]
-		</ul> -->
-
 		<hr color = #44AA27>
 
 		<h2>Links</h2>
 		<ul>
 			<li> <a href = "https://codeforces.com/profile/ranveerraj">Codeforces</a>
 			<li> <a href = "https://www.codechef.com/users/ranveerraj">CodeChef</a>
-			<li> <a href = "https://www.linkedin.com/in/ranveeriitkgp">LinkedIn</a>
 			<li> <a href = "https://github.com/ranveer-raj">Github</a>
 		</ul>
 
