--- a/personal.html
+++ b/personal.html
@@ -121,7 +121,7 @@
 		</p>	
 		<br>		
 		
-		<h2>Chess</h2>
+		<h2>Extracurricular Activities</h2>
 		<p>
 			Chess is one of my favourite sports. I am an active participant in <a href = "https://www.chess.com">chess.com</a> [<a href = "https://www.chess.com/member/ranveerritesh">account</a>]. I like to play it casually and I enjoy playing games with fast time control (as they are more fun).
 		</p>
@@ -130,12 +130,9 @@
 
 		<h2>Links</h2>
 		<ul>
-			<!-- <li> <a href = "https://www.facebook.com/">Facebook</a>
-			<li> <a href = "https://www.instagram.com/">Instagram</a> -->
-			<li> <a href = "https://codeforces.com/profile/ranveerraj">Codeforces</a>
-			<li> <a href = "https://www.codechef.com/users/ranveerraj">CodeChef</a>
+			<li> <a href = "https://www.facebook.com/ranveeriitkgp">Facebook</a>
+			<li> <a href = "https://www.instagram.com/ranveerritesh">Instagram</a>
 			<li> <a href = "https://www.linkedin.com/in/ranveeriitkgp">LinkedIn</a>
-			<li> <a href = "https://github.com/ranveer-raj">Github</a>
 		</ul>
 
 		<h2>Contact</h2>
