modified:   cp.html 	modified:   index.html 	modified:   personal.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				font-family: "Old Standard TT";
 				font-size: 23px;
 				color: white;
+				text-align: justify;
 			}
 			h2{
 				font-family: "Noto Serif";
