--- a/cp.html
+++ b/cp.html
@@ -15,6 +15,7 @@
 				font-family: "Old Standard TT";
 				font-size: 23px;
 				color: white;
+				text-align: justify;
 			}
 			h2{
 				font-family: "Noto Serif";
