--- a/gallery.html
+++ b/gallery.html
@@ -41,8 +41,7 @@
 	</head>
 	<body bgcolor = #050513>
 		<br>
-		 <img align = center title="Ranveer Raj" src="images/Passport_photograph.jpg" alt="img" style="width:90%; margin-left:5%; margin-right:5%"> </a>
-		<!-- <p style="font-family: 'IM Fell English'; font-size:40px;" align="center"> <I><a href = "ascii_art.html" style="color:white;">Anubhav Dhar</a> & <a href = "cats.html" style="color:white;">Boro Bholluk</a></I> </p> -->
+		 <img align = center title="Ranveer Raj" src="images/photograph.jpg" alt="img" style="width:90%; margin-left:5%; margin-right:5%"> </a>
 
 	</body>
 </html>
