--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					</p>
 				</td>
 				<td>
-					<a href = "gallery.html"> <img src = "images/Passport_photograph.jpg" alt = "img" style = "width:70%;margin-left:15%; margin-right:15%; margin-top: 15%; margin-bottom: 15%;"> </a>
+					<a href = "gallery.html"> <img src = "images/passport_photograph.jpeg" alt = "img" style = "width:70%;margin-left:15%; margin-right:15%; margin-top: 15%; margin-bottom: 15%;"> </a>
 				</td>
 			</tr>
 		</table>
