--- a/personal.html
+++ b/personal.html
@@ -101,7 +101,7 @@
 
 				<tr valign=top>
 					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2023-24 (Ongoing):</u></i></span>
+						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2023-24:</u></i></span>
 						<ul>
 							<li> Foundations of Computing Science</li>
 							<li> Ubiquitous Computing</a>
@@ -110,11 +110,11 @@
 						</ul>
 					</td>
 					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Spring 2023-24 (Upcoming):</u></i></span>
+						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Spring 2023-24 (ongoing):</u></i></span>
 						<ul>
 							<li> Switching Circuit and Logic Design</a>
-							<li> Switching Circuit and Logic Design Laboratory</a>
 							<li> Computer Architecture and Operating System</a>
+							<li> Natural Language Processing</a>
 						</ul>
 					</td>
 				</tr>
