--- a/personal.html
+++ b/personal.html
@@ -114,7 +114,8 @@
 						<ul>
 							<li> Switching Circuit and Logic Design</a>
 							<li> Computer Architecture and Operating System</a>
-							<li> Natural Language Processing</a>
+							<li> Machine Learning</a>
+							<li> Audio System Engineering</a>
 						</ul>
 					</td>
 				</tr>
