updated various information

--- a/cp.html
+++ b/cp.html
@@ -1,92 +1,155 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Ranveer Raj - Coding Portfolio</title>
-		<link rel = "shortcut icon" type = "image/png" href = "images/logo.png">
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&family=IM+Fell+English&family=Nanum+Myeongjo:wght@700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Ovo&family=Vollkorn:wght@500&family=Zen+Antique&display=swap" rel="stylesheet">
+<head>
+	<title>Ranveer Raj - Coding Portfolio</title>
+	<link rel="shortcut icon" type="image/png" href="images/logo.png">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&family=IM+Fell+English&family=Nanum+Myeongjo:wght@700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Ovo&family=Vollkorn:wght@500&family=Zen+Antique&display=swap"
+		rel="stylesheet">
 
-		<style>
-			p, ul{
-				font-family: "Old Standard TT";
-				font-size: 23px;
-				color: white;
-				text-align: justify;
-			}
-			h2{
-				font-family: "Noto Serif";
-				font-size: 30px;
-				color: #EEA000;
-			}
-			a{
-				text-decoration:none; 
-				color:#00CCEE;
-			}
-			.emph{
-				color:#FF8888;
-				font-style:italic;
-			}
-		</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<h1 align = "center" style = "color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
-		<center style = "margin-top:-17px">
-			<font face = "IM Fell English" style = "font-size:20px" color = white>
-				<table>
-					<tr>
-						<td> <a href = "index.html"> Home </a> |</td> 
-						<td> <a href = "personal.html"> Personal </a> |</td> 
-						<td> <a href = "cp.html" style = "text-decoration:none; color:white"> Coding Portfolio </a> </td>
-					</tr>
-				</table>
-			</font>
-		</center>
-		<br><br>
-		<hr color = #44AA27>
-	</head>
-	<body bgcolor = #050513>
+	<style>
+		p,
+		ul {
+			font-family: "Old Standard TT";
+			font-size: 23px;
+			color: white;
+			text-align: justify;
+		}
 
-		<h2>Competitive Programming</h2>
-		<ul>
-			<li><span style="color:#03a89e!important;">Specialist</span> on <a href = "https://www.codeforces.com">Codeforces</a> [<a href = "https://codeforces.com/profile/ranveerraj">account</a>]</a>
-			<li><span style="color:#684273;">4&#9733 coder</span> on <a href = "https://www.codecef.com">Codechef</a> [<a href = "https://www.codechef.com/users/ranveerraj">account</a>]</a>
-		</ul>
-		<br>
-		<h2>Research and Development Intern</h2>
-		<font style = "font-size:20px" color = white>
-			<h3>A joint venture by <a href = "https://iitkgp.ac.in"> IIT Kharagpur</a>, <a href = "https://iisc.ac.in"> IISc</a> and <a href = "https://www.drdo.gov.in"> DRDO</a>&nbsp;&nbsp;|&nbsp;&nbsp;Under the guidance of <a href = "https://iitkgp.ac.in/department/CE/faculty/ce-abshaw"> Prof. Amit Shaw</a> </h3>
+		h2 {
+			font-family: "Noto Serif";
+			font-size: 30px;
+			color: #EEA000;
+		}
+
+		a {
+			text-decoration: none;
+			color: #00CCEE;
+		}
+
+		.emph {
+			color: #FF8888;
+			font-style: italic;
+		}
+
+		Table {
+			border-collapse: collapse;
+			width: 100%;
+			margin-bottom: 20px;
+			font-family: "Old Standard TT";
+			font-size: 23px;
+			color: white;
+			text-align: justify;
+		}
+	</style>
+
+	<h1 align="center" style="color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
+	<center style="margin-top:-17px">
+		<font face="IM Fell English" style="font-size:20px" color=white>
+			<table, class="none">
+				<tr>
+					<td> <a href="index.html"> Home </a> |</td>
+					<td> <a href="personal.html"> Personal </a> |</td>
+					<td> <a href="cp.html" style="text-decoration:none; color:white"> Coding
+							Portfolio </a> </td>
+				</tr>
+			</table,>
 		</font>
-		<p>
+	</center>
+	<br><br>
+	<hr color=#44AA27>
+</head>
+
+<body bgcolor=#091836>
+	<h2>Competitive Programming</h2>
+	<ul>
+		<li><span style="color:#03a89e!important;">Specialist</span> on <a href="https://codeforces.com/"
+				target="_blank">Codeforces</a> [<a href="https://codeforces.com/profile/ranveerraj"
+				target="_blank">account</a>]</a>
+		<li><span style="color:#684273;">4&#9733 coder</span> on <a href="https://www.codechef.com"
+				target="_blank">Codechef</a> [<a href="https://www.codechef.com/users/ranveerraj"
+				target="_blank">account</a>]</a>
+	</ul>
+	<br>
+	<h2>Research and Development Intern</h2>
+	<font style="font-size:20px" color=white>
+		<h3>Structural Lab, <a href="https://www.iitkgp.ac.in/department/CE" target="_blank">Department of Civil
+				Engineering</a>, <a href="https://iitkgp.ac.in" target="_blank"> IIT
+				Kharagpur</a>&nbsp;&nbsp;|&nbsp;&nbsp;Under the guidance of <a
+				href="https://iitkgp.ac.in/department/CE/faculty/ce-abshaw" target="_blank"> Prof. Amit
+				Shaw</a> </h3>
+	</font>
+	<p>
+	<ul>
+		As an R&D Intern, I dedicated my efforts to harnessing the computational power of multi-core machines
+		for scientific computing. Collaborating with a team of two, we embarked on pioneering enhancements in
+		particle interaction simulations using the smooth particle hydrodynamics method.
+		<br><br>
+		My accomplishments include:
 		<ul>
-			As an R&D Intern, I dedicated my efforts to harnessing the computational power of multi-core machines for scientific computing. Collaborating with a team of two, we embarked on pioneering enhancements in particle interaction simulations using the smooth particle hydrodynamics method.
-			<br><br>
-			My accomplishments include:
-			<ul>
-				<li>Achieving remarkable efficiency with 93% CPU utilization on an 8-core machine by implementing advanced parallel computing techniques, notably OpenMP, to parallelize C++ code.
-				<li>Reducing computation time by a factor of 4 compared to the sequential code by leveraging my parallel computing skills to optimize critical code segments.
-				<li>Conducted rigorous benchmarking, resulting in an impressive performance boost of 14.6x on a 32-core machine while meticulously documenting procedures to ensure seamless future maintenance.
-			</ul>
-			<br>
-			This experience allowed me to gain valuable insights into parallel computing and its applications in scientific research, emphasizing both innovation and practicality.	
+			<li>Achieving remarkable efficiency with 93% CPU utilization on an 8-core machine by
+				implementing advanced parallel computing techniques, notably OpenMP, to parallelize C++
+				code.
+			<li>Reducing computation time by a factor of 4 compared to the sequential code by leveraging my
+				parallel computing skills to optimize critical code segments.
+			<li>Conducted rigorous benchmarking, resulting in an impressive performance boost of 14.6x on a
+				32-core machine while meticulously documenting procedures to ensure seamless future
+				maintenance.
 		</ul>
-		</p>
 		<br>
-		<hr color = #44AA27>
+		This experience allowed me to gain valuable insights into parallel computing and its applications in
+		scientific research, emphasizing both innovation and practicality.
+	</ul>
+	</p>
+	<br>
+	<hr color=#44AA27>
+	<br>
+	<table>
+		<colgroup>
+			<col style="width: 25%;">
+			<col style="width: 25%;">
+			<col style="width: 50%;">
+		</colgroup>
+		<tr valign=top>
+			<td style="border: 0;">
+				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Social Media Profiles:</u></i></span>
+				<ul>
+					<li><a href="https://www.facebook.com/ranveerritesh"
+							target="_blank">Facebook</a>
+					<li><a href="https://www.instagram.com/ranveerritesh"
+							target="_blank">Instagram</a>
+					<li><a href="https://www.linkedin.com/in/ranveeriitkgp"
+							target="_blank">LinkedIn</a>
+				</ul>
+			</td>
+			<td style="border: 0;">
+				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Coding Profiles:</u></i></span>
+				<ul>
+					<li><a href="https://codeforces.com/profile/ranveerraj"
+							target="_blank">Codeforces</a>
+					<li><a href="https://www.codechef.com/users/ranveerraj"
+							target="_blank">CodeChef</a>
+					<li><a href="https://github.com/ranveer-raj" target="_blank">Github</a>
+				</ul>
+			</td>
+			<td style="border: 0;">
+				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Contact Information:</u></i></span>
+				<ul>
+					<li>Email: <i><span
+								style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
+					<li>Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
+				</ul>
+			</td>
+		</tr>
+	</table>
+</body>
 
-		<h2>Links</h2>
-		<ul>
-			<li> <a href = "https://codeforces.com/profile/ranveerraj">Codeforces</a>
-			<li> <a href = "https://www.codechef.com/users/ranveerraj">CodeChef</a>
-			<li> <a href = "https://github.com/ranveer-raj">Github</a>
-		</ul>
-
-		<h2>Contact</h2>
-		<ul>
-			<li> Email: <i><span style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
-			<li> Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
-		</ul>
-	</body>
 </html>
