--- a/index.html
+++ b/index.html
@@ -1,85 +1,154 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Ranveer Raj - Home</title>
-		
 
-		<link rel = "shortcut icon" type = "image/png" href = "images/logo.png">
-		
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&family=IM+Fell+English&family=Nanum+Myeongjo:wght@700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Ovo&family=Vollkorn:wght@500&family=Zen+Antique&display=swap" rel="stylesheet">
+<head>
+	<title>Ranveer Raj - Home</title>
 
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<style>
-			p, ul{
-				font-family: "Old Standard TT";
-				font-size: 23px;
-				color: white;
-				text-align: justify;
-			}
-			h2{
-				font-family: "Noto Serif";
-				font-size: 30px;
-				color: #EEA000;
-			}
-			a{
-				text-decoration:none; 
-				color:#00CCEE;
-			}
-		</style>
+	<link rel="shortcut icon" type="image/png" href="images/logo.png">
 
-		<h1 align = "center" style = "color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
-		<center style = "margin-top:-17px">
-			<font face = "IM Fell English" style = "font-size:20px" color = white>
-				<table>
-					<tr>
-						<td> <a href = "index.html" style = "text-decoration:none; color:white"> Home </a> |</td> 
-						<td> <a href = "personal.html"> Personal </a> |</td> 
-						<td> <a href = "cp.html"> Coding Portfolio </a> </td>
-					</tr>
-				</table>
-			</font>
-		</center>
-		<br><br>
-		<hr color = #44AA27>
-	</head>
-	<body bgcolor = #050513>
-		<h2>Introduction</h2>
-		<table>
-			<tr>
-				<td width = 75% margin-left = 5% margin-right = 5%>
-					<p align = "justify"> 
-					I am a final-year undergraduate student pursuing a major in <a href = "https://en.wikipedia.org/wiki/Civil_engineering">Civil Engineering</a> and a minor in <a href = "https://en.wikipedia.org/wiki/Computer_science_and_engineering">Computer Science and Engineering</a> at <a href = "https://www.iitkgp.ac.in/">Indian Institute of Technology Kharagpur</a>.  My academic journey has been a fusion of engineering and technology, allowing me to explore a diverse range of subjects and interests.
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&family=IM+Fell+English&family=Nanum+Myeongjo:wght@700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Ovo&family=Vollkorn:wght@500&family=Zen+Antique&display=swap"
+		rel="stylesheet">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<style>
+		p,
+		ul {
+			font-family: "Old Standard TT";
+			font-size: 23px;
+			color: white;
+			text-align: justify;
+		}
+
+		h2 {
+			font-family: "Noto Serif";
+			font-size: 30px;
+			color: #EEA000;
+		}
+
+		a {
+			text-decoration: none;
+			color: #00CCEE;
+		}
+
+		Table {
+			border-collapse: collapse;
+			width: 100%;
+			margin-bottom: 20px;
+			font-family: "Old Standard TT";
+			font-size: 23px;
+			color: white;
+			text-align: justify;
+		}
+	</style>
+
+	<h1 align="center" style="color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
+	<center style="margin-top:-17px">
+		<font face="IM Fell English" style="font-size:20px" color=white>
+			<table, class="none">
+				<tr>
+					<td> <a href="index.html" style="text-decoration:none; color:white"> Home </a> |
+					</td>
+					<td> <a href="personal.html"> Personal </a> |</td>
+					<td> <a href="cp.html"> Coding Portfolio </a> </td>
+				</tr>
+			</table,>
+		</font>
+	</center>
+	<br><br>
+	<hr color=#44AA27>
+</head>
+
+<body bgcolor=#091836>
+	<h2>Introduction</h2>
+	<table>
+		<tr>
+			<td width=75% margin-left=5% margin-right=5% style="border: 0;">
+				<p align="justify">
+					I am a final-year undergraduate student pursuing a major in <a
+						href="https://en.wikipedia.org/wiki/Civil_engineering"
+						target="_blank">Civil Engineering</a> and a minor in <a
+						href="https://en.wikipedia.org/wiki/Computer_science_and_engineering"
+						target="_blank">Computer Science and Engineering</a> at <a
+						href="https://www.iitkgp.ac.in/" target="_blank">Indian Institute of
+						Technology Kharagpur</a>. My academic journey has been a fusion of
+					engineering and technology, allowing me to explore a diverse range of subjects
+					and interests.
 					<br> <br>
-					In addition to my academic pursuits, I am an active participant in <a href = "https://en.wikipedia.org/wiki/Competitive_programming"> Competitive Programming </a>, where I have honed my problem-solving and coding skills. This passion has led me to undertake challenging coding projects, demonstrating my commitment to the world of software development [<a href = "cp.html">Coding Portfolio</a>]. 
+					In addition to my academic pursuits, I am an active participant in <a
+						href="https://en.wikipedia.org/wiki/Competitive_programming"
+						target="_blank"> Competitive Programming </a>, where I have honed my
+					problem-solving and coding skills. This passion has led me to undertake
+					challenging coding projects, demonstrating my commitment to the world of
+					software development [<a href="cp.html" target="_blank">Coding Portfolio</a>].
 					<br> <br>
-					Before embarking on my undergraduate journey, I completed my senior secondary education at <a href = "https://www.tpscollegepatna.org/">Thakur Prasad Singh College</a> in Patna. Prior to that, I received my foundational education at <a href = "https://dssbihta.com/">Digdarshan Secondary School</a>, also in Patna.
+					Before embarking on my undergraduate journey, I completed my senior secondary
+					education at <a href="https://www.tpscollegepatna.org/" target="_blank">Thakur
+						Prasad Singh College</a> in Patna. Prior to that, I received my
+					foundational education at <a href="https://dssbihta.com/"
+						target="_blank">Digdarshan Secondary School</a>, also in Patna.
 					<br> <br>
-					My academic and extracurricular experiences have shaped me into a well-rounded individual with a passion for engineering, computer science, and the thrill of problem-solving. I am eager to continue my educational and professional journey, leveraging my diverse skill set to contribute to the ever-evolving fields of technology and engineering.
-					</p>
-				</td>
-				<td>
-					<a href = "gallery.html"> <img src = "images/passport_photograph.jpeg" alt = "img" style = "width:70%;margin-left:15%; margin-right:15%; margin-top: 15%; margin-bottom: 15%;"> </a>
-				</td>
-			</tr>
-		</table>
+					My academic and extracurricular experiences have shaped me into a well-rounded
+					individual with a passion for engineering, computer science, and the thrill of
+					problem-solving. I am eager to continue my educational and professional journey,
+					leveraging my diverse skill set to contribute to the ever-evolving fields of
+					technology and engineering.
+				</p>
+			</td>
+			<td style="border: 0;">
+				<a href="gallery.html"> <img src="images/passport_photograph.jpeg" alt="img"
+						style="width:70%;margin-left:15%; margin-right:15%; margin-top: 15%; margin-bottom: 15%;">
+				</a>
+			</td>
+		</tr>
+	</table>
 
-		<hr color = #44AA27>
+	<hr color=#44AA27>
+	<br>
+	<table>
+		<colgroup>
+			<col style="width: 25%;">
+			<col style="width: 25%;">
+			<col style="width: 50%;">
+		</colgroup>
+		<tr valign=top>
+			<td style="border: 0;">
+				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Social Media Profiles:</u></i></span>
+				<ul>
+					<li><a href="https://www.facebook.com/ranveerritesh"
+							target="_blank">Facebook</a>
+					<li><a href="https://www.instagram.com/ranveerritesh"
+							target="_blank">Instagram</a>
+					<li><a href="https://www.linkedin.com/in/ranveeriitkgp"
+							target="_blank">LinkedIn</a>
+				</ul>
+			</td>
+			<td style="border: 0;">
+				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Coding Profiles:</u></i></span>
+				<ul>
+					<li><a href="https://codeforces.com/profile/ranveerraj"
+							target="_blank">Codeforces</a>
+					<li><a href="https://www.codechef.com/users/ranveerraj"
+							target="_blank">CodeChef</a>
+					<li><a href="https://github.com/ranveer-raj" target="_blank">Github</a>
+				</ul>
+			</td>
+			<td style="border: 0;">
+				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Contact Information:</u></i></span>
+				<ul>
+					<li>Email: <i><span
+								style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
+					<li>Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
+				</ul>
+			</td>
+		</tr>
+	</table>
+</body>
 
-		<h2>Links</h2>
-		<ul>
-			<li> <a href = "https://codeforces.com/profile/ranveerraj">Codeforces</a>
-			<li> <a href = "https://www.codechef.com/users/ranveerraj">CodeChef</a>
-			<li> <a href = "https://www.linkedin.com/in/ranveeriitkgp">LinkedIn</a>
-			<li> <a href = "https://github.com/ranveer-raj">Github</a>
-		</ul>
-
-		<h2>Contact</h2>
-		<ul>
-			<li> Email: <i><span style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
-			<li> Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
-		</ul>
-	</body>
 </html>
