--- a/personal.html
+++ b/personal.html
@@ -1,146 +1,251 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Ranveer Raj - Personal</title>
-		<link rel = "shortcut icon" type = "image/png" href = "images/logo.png">
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&family=IM+Fell+English&family=Nanum+Myeongjo:wght@700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Ovo&family=Vollkorn:wght@500&family=Zen+Antique&display=swap" rel="stylesheet">
+<head>
+	<title>Ranveer Raj - Personal</title>
+	<link rel="shortcut icon" type="image/png" href="images/logo.png">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&family=IM+Fell+English&family=Nanum+Myeongjo:wght@700&family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Ovo&family=Vollkorn:wght@500&family=Zen+Antique&display=swap"
+		rel="stylesheet">
 
-		<style>
-			p, ul{
-				font-family: "Old Standard TT";
-				font-size: 23px;
-				color: white;
-				text-align: justify;
-			}
-			h2{
-				font-family: "Noto Serif";
-				font-size: 30px;
-				color: #EEA000;
-			}
-			a{
-				text-decoration:none; 
-				color:#00CCEE;
-			}
-		</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<h1 align = "center" style = "color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
-		<center style = "margin-top:-17px">
-			<font face = "IM Fell English" style = "font-size:20px" color = white>
-				<table>
-					<tr>
-						<td> <a href = "index.html"> Home </a> |</td> 
-						<td> <a href = "personal.html" style = "text-decoration:none; color:white"> Personal </a> |</td> 
-						<td> <a href = "cp.html"> Coding Portfolio </a> </td>
-					</tr>
-				</table>
-			</font>
-		</center>
-		<br><br>
-		<hr color = #44AA27>
-	</head>
-	<body bgcolor = #050513>
-		<h2> Academic Coursework</h2> 
-		<p align = "justify">
-			<table>
-				<tr valign=top>
-					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2020-21:</u></i></span>
-						<ul>
-							<li> Advanced Calculus</a>
-							<li> Programming and Data Structures</a>
-							<li> Programming and Data Structures Laboratory</a>
-						</ul>
-					</td>
-					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Spring 2020-21:</u></i></span>
-						<ul>
-							<li> Linear Algebra</a>
-							<li> Numerical and Complex Analysis</a>
-							<li> Electrical Technology</a>
-						</ul>
-					</td>
+	<style>
+		p,
+		ul {
+			font-family: "Old Standard TT";
+			font-size: 23px;
+			color: white;
+			text-align: justify;
+		}
+
+		h2 {
+			font-family: "Noto Serif";
+			font-size: 30px;
+			color: #EEA000;
+		}
+
+		a {
+			text-decoration: none;
+			color: #00CCEE;
+		}
+
+		Table {
+			border-collapse: collapse;
+			width: 100%;
+			margin-bottom: 20px;
+			font-family: "Old Standard TT";
+			font-size: 23px;
+			color: white;
+			text-align: justify;
+		}
+
+		td {
+			border: 0.5px solid #EEA000;
+			text-align: left;
+			padding: 20px;
+			color: #f2f2f2;
+			text-align: justify;
+		}
+
+		th {
+			border: 0.5px solid #EEA000;
+			text-align: left;
+			padding: 20px;
+			background-color: #EEA000;
+			/* color:#CCDD00; */
+			color: black;
+			font-size: 29px;
+			text-align: justify;
+		}
+	</style>
+
+	<h1 align="center" style="color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
+	<center style="margin-top:-17px">
+		<font face="IM Fell English" style="font-size:20px" color=white>
+			<table, class="none">
+				<tr>
+					<td> <a href="index.html"> Home </a> |</td>
+					<td> <a href="personal.html" style="text-decoration:none; color:white"> Personal
+						</a> |</td>
+					<td> <a href="cp.html"> Coding Portfolio </a> </td>
 				</tr>
+			</table,>
+		</font>
+	</center>
+	<br><br>
+	<hr color=#44AA27>
+</head>
 
-				<tr valign=top>
-					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2021-22:</u></i></span>
-						<ul>
-							<li> Machine Learning Foundations and Applications</a>
-							<li> Probability and Statistics</a>
-						</ul>
-					</td>
-					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Spring 2022-21:</u></i></span>
-						<ul>
-							<li> Basic Electronics</a>
-							<li> Basic Electronics Laboratory</a>
-						</ul>
-					</td>
-				</tr>
+<body bgcolor=#091836>
+	<h2> Academic Coursework</h2>
+	<p align="justify">
+	<table>
+		<colgroup>
+			<col style="width: 40%;">
+			<col style="width: 60%;">
+		</colgroup>
+		<tr>
+			<th>Relevant Mathematics Courses</th>
+			<th>Description</th>
+		</tr>
+		<tr>
+			<td>Advanced Calculus</td>
+			<td>This course went deeper into calculus, covering topics like multivariable calculus, vector
+				calculus, and advanced integration techniques. The emphasis was on gaining a solid
+				understanding of calculus and its practical applications across various fields.</td>
+		</tr>
+		<tr>
+			<td>Linear Algebra, Numerical and Complex Analysis</td>
+			<td>This combined course included fundamental topics in linear algebra, numerical analysis, and
+				complex analysis. Linear algebra covered vector spaces, linear transformations, and
+				eigenvalues. Numerical analysis focused on problem-solving algorithms, while complex
+				analysis explored functions with complex variables and their real-world applications.
+			</td>
+		</tr>
+		<tr>
+			<td>Probability and Statistics</td>
+			<td>Probability and Statistics introduced fundamental concepts in probability theory and
+				statistical methods. The curriculum encompassed the study of various probability
+				distributions, hypothesis testing procedures, regression analysis techniques, and other
+				statistical methodologies.</td>
+		</tr>
+		<tr>
+			<td>Cryptography and Network Security</td>
+			<td>This course delved into the principles and techniques of cryptography and network security.
+				Topics included encryption algorithms, public-key infrastructure, digital signatures,
+				and secure communication protocols.</td>
+		</tr>
+		<tr>
+			<td style="border: 0;"></td>
+			<td style="border: 0;"></td>
+		</tr>
+		<tr>
+			<th>Relevant Computer Science Courses</th>
+			<th>Description</th>
+		</tr>
+		<tr>
+			<td>Programming and Data Structures (Theory + Lab)</td>
+			<td>Theory: Introduction to fundamental programming concepts and data structures such as arrays,
+				linked lists, stacks, and queues. Understanding of algorithms, time complexity, and
+				space complexity.<br><br>Lab: Practical application of programming skills with hands-on
+				exercises focusing on data structure implementation and problem-solving.</td>
+		</tr>
+		<tr>
+			<td>Algorithms-I (Theory + Lab)</td>
+			<td>Theory: In-depth study of fundamental algorithms, algorithmic design paradigms, and analysis
+				of their efficiency. Covers sorting algorithms, searching algorithms, dynamic
+				programming and graph algorithms.<br><br>Lab: Application of algorithmic concepts
+				through coding and problem-solving tasks.</td>
+		</tr>
+		<tr>
+			<td>Foundations of Computing Science</td>
+			<td>Exploration of the theoretical foundations of computing, including discrete structures,
+				formal languages, automata theory, and computability. Understanding the mathematical
+				underpinnings of computation.</td>
+		</tr>
+		<tr>
+			<td>Ubiquitous Computing</td>
+			<td>Study of computing in the context of everyday life, emphasizing the integration of computing
+				into various aspects of the environment. Topics include mobile computing, sensor
+				networks, and pervasive computing.</td>
+		</tr>
+		<tr>
+			<td>Artificial Intelligence</td>
+			<td>Comprehensive overview of artificial intelligence concepts, including problem-solving,
+				knowledge representation, machine learning, and deep learning. Introduction to AI
+				applications and ethical considerations.</td>
+		</tr>
+		<tr>
+			<td>Machine Learning</td>
+			<td>In-depth exploration of machine learning algorithms, techniques, and applications. Focus on
+				supervised and unsupervised learning, feature engineering, and model evaluation.</td>
+		</tr>
+		<tr>
+			<td>Switching Circuits and Logic Design</td>
+			<td>Understanding the design and analysis of digital circuits, including logic gates, sequential
+				circuits, and combinational circuits. Covers switching theory and its application in
+				computer systems.</td>
+		</tr>
+		<tr>
+			<td>Computer Architecture and Operating System</td>
+			<td>Computer Architecture: Exploration of computer organization and architecture, including CPU
+				design, memory systems, and input/output structures. Study of performance optimization
+				and parallel processing.<br><br>Operating System: In-depth analysis of operating system
+				concepts, process management, memory management, file systems, and system security.
+				Practical exposure to designing and implementing basic operating system functionalities.
+			</td>
+		</tr>
+	</table>
 
-				<tr valign=top>
-					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2022-23:</u></i></span>
-						<ul>
-							<li> Matrix Structural Analysis</li>
-						</ul>
-					</td>
-					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Spring 2022-23:</u></i></span>
-						<ul>
-							<li> Algorithms-I</a>
-							<li> Algorithms-I Laboratory</a>
-						</ul>
-					</td>
-				</tr>
+	</p>
+	<br>
 
-				<tr valign=top>
-					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Autumn 2023-24:</u></i></span>
-						<ul>
-							<li> Foundations of Computing Science</li>
-							<li> Ubiquitous Computing</a>
-							<li> Artificial Intelligence</a>
-							<li> Cryptography and Network Security</a>
-						</ul>
-					</td>
-					<td>
-						<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i> <u>Spring 2023-24 (ongoing):</u></i></span>
-						<ul>
-							<li> Switching Circuit and Logic Design</a>
-							<li> Computer Architecture and Operating System</a>
-							<li> Machine Learning</a>
-							<li> Audio System Engineering</a>
-						</ul>
-					</td>
-				</tr>
-			</table>
-		</p>	
-		<br>		
-		
-		<h2>Extracurricular Activities</h2>
-		<p>
-			Chess is one of my favourite sports. I am an active participant in <a href = "https://www.chess.com">chess.com</a> [<a href = "https://www.chess.com/member/ranveerritesh">account</a>]. I like to play it casually and I enjoy playing games with fast time control (as they are more fun).
-		</p>
+	<h2>Extracurricular Activities</h2>
+	<p>
+		Chess has always been more than just a game for me - it's a passion that I actively pursue. I am an
+		active participant in <a href="https://www.chess.com" target="_blank">chess.com</a> [<a
+			href="https://www.chess.com/member/ranveerritesh" target="_blank">account</a>]. The digital
+		platform provides me
+		with the perfect environment to enjoy the game casually, allowing for both relaxation and mental
+		stimulation.
 
-		<hr color = #44AA27>
+		One aspect of chess that particularly captivates me is the thrill of playing games with fast time
+		controls. The dynamic nature of these matches adds an extra layer of excitement and fun to the strategic
+		depth of chess. In a fast-paced environment, quick thinking and adaptability become crucial, fostering a
+		sense of mental agility that I find invigorating.
 
-		<h2>Links</h2>
-		<ul>
-			<li> <a href = "https://www.facebook.com/ranveeriitkgp">Facebook</a>
-			<li> <a href = "https://www.instagram.com/ranveerritesh">Instagram</a>
-			<li> <a href = "https://www.linkedin.com/in/ranveeriitkgp">LinkedIn</a>
-		</ul>
+		Whether it's a slow and deliberate match or a rapid-fire game, I find joy in every move, every
+		checkmate, and the continuous journey of improvement that chess offers.
 
-		<h2>Contact</h2>
-		<ul>
-			<li> Email: <i><span style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
-			<li> Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
-		</ul>
-	</body>
+	</p>
+
+	<hr color=#44AA27>
+
+	<table>
+		<colgroup>
+			<col style="width: 25%;">
+			<col style="width: 25%;">
+			<col style="width: 50%;">
+		</colgroup>
+		<tr valign=top>
+			<td style="border: 0;">
+				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Social Media Profiles:</u></i></span>
+				<ul>
+					<li><a href="https://www.facebook.com/ranveerritesh"
+							target="_blank">Facebook</a>
+					<li><a href="https://www.instagram.com/ranveerritesh"
+							target="_blank">Instagram</a>
+					<li><a href="https://www.linkedin.com/in/ranveeriitkgp"
+							target="_blank">LinkedIn</a>
+				</ul>
+			</td>
+			<td style="border: 0;">
+				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Coding Profiles:</u></i></span>
+				<ul>
+					<li><a href="https://codeforces.com/profile/ranveerraj"
+							target="_blank">Codeforces</a>
+					<li><a href="https://www.codechef.com/users/ranveerraj"
+							target="_blank">CodeChef</a>
+					<li><a href="https://github.com/ranveer-raj" target="_blank">Github</a>
+				</ul>
+			</td>
+			<td style="border: 0;">
+				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Contact Information:</u></i></span>
+				<ul>
+					<li>Email: <i><span
+								style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
+					<li>Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
+				</ul>
+			</td>
+		</tr>
+	</table>
+
+</body>
+
 </html>
