edited contact section

--- a/personal.html
+++ b/personal.html
@@ -184,7 +184,7 @@
 	<br>
 
 	<h2>Extracurricular Activities</h2>
-	<p>
+	<p align="justify">
 		Chess has always been more than just a game for me - it's a passion that I actively pursue. I am an
 		active participant in <a href="https://www.chess.com" target="_blank">chess.com</a> [<a
 			href="https://www.chess.com/member/ranveerritesh" target="_blank">account</a>]. The digital
@@ -210,42 +210,51 @@
 			<col style="width: 25%;">
 			<col style="width: 50%;">
 		</colgroup>
-		<tr valign=top>
-			<td style="border: 0;">
-				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
-						<u>Social Media Profiles:</u></i></span>
-				<ul>
-					<li><a href="https://www.facebook.com/ranveerritesh"
-							target="_blank">Facebook</a>
-					<li><a href="https://www.instagram.com/ranveerritesh"
-							target="_blank">Instagram</a>
-					<li><a href="https://www.linkedin.com/in/ranveeriitkgp"
-							target="_blank">LinkedIn</a>
-				</ul>
+		<tr>
+			<td style="border: 0;"><span
+					style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Social</u> <u>Media</u> <u>Profiles:</u></i></span></th>
+			<td style="border: 0;"><span
+					style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Coding</u> <u>Profiles:</u></i></span></th>
+			<td style="border: 0;"><span
+					style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Contact</u> <u>Information:</u></i></span></th>
+		</tr>
+		<tr>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://www.facebook.com/ranveerritesh" target="_blank">Facebook</a>
 			</td>
-			<td style="border: 0;">
-				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
-						<u>Coding Profiles:</u></i></span>
-				<ul>
-					<li><a href="https://codeforces.com/profile/ranveerraj"
-							target="_blank">Codeforces</a>
-					<li><a href="https://www.codechef.com/users/ranveerraj"
-							target="_blank">CodeChef</a>
-					<li><a href="https://github.com/ranveer-raj" target="_blank">Github</a>
-				</ul>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://codeforces.com/profile/ranveerraj" target="_blank">Codeforces</a>
 			</td>
-			<td style="border: 0;">
-				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
-						<u>Contact Information:</u></i></span>
-				<ul>
-					<li>Email: <i><span
-								style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
-					<li>Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
-				</ul>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li>Email: <i><span style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
+			</td>
+		</tr>
+		<tr>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://www.instagram.com/ranveerritesh" target="_blank">Instagram</a>
+			</td>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://www.codechef.com/users/ranveerraj" target="_blank">CodeChef</a>
+			</td>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li>Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
+			</td>
+		</tr>
+		<tr>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://www.linkedin.com/in/ranveeriitkgp" target="_blank">LinkedIn</a>
+			</td>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://github.com/ranveer-raj" target="_blank">Github</a>
+			</td>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li>Phone: <span style="color:#FF90CB">+91 9304753347</span>
 			</td>
 		</tr>
 	</table>
-
 </body>
 
 </html>
