--- a/cp.html
+++ b/cp.html
@@ -46,6 +46,22 @@
 			color: white;
 			text-align: justify;
 		}
+
+		td {
+			border: 0.5px solid #EEA000;
+			text-align: left;
+			padding: 20px;
+			color: #f2f2f2;
+			text-align: justify;
+		}
+
+		th {
+			/* color:#CCDD00; */
+			color: black;
+			font-size: 23px;
+			text-align: justify;
+			font-weight: normal;
+		}
 	</style>
 
 	<h1 align="center" style="color:#66CC44; font-size:40px; font-family: 'Noto Serif'"> Ranveer Raj</h1>
@@ -85,7 +101,7 @@
 				Shaw</a> </h3>
 	</font>
 	<p>
-	<ul>
+	<ul style="padding: 20px;">
 		As an R&D Intern, I dedicated my efforts to harnessing the computational power of multi-core machines
 		for scientific computing. Collaborating with a team of two, we embarked on pioneering enhancements in
 		particle interaction simulations using the smooth particle hydrodynamics method.
@@ -106,47 +122,57 @@
 		scientific research, emphasizing both innovation and practicality.
 	</ul>
 	</p>
-	<br>
+
 	<hr color=#44AA27>
-	<br>
+
 	<table>
 		<colgroup>
 			<col style="width: 25%;">
 			<col style="width: 25%;">
 			<col style="width: 50%;">
 		</colgroup>
-		<tr valign=top>
-			<td style="border: 0;">
-				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
-						<u>Social Media Profiles:</u></i></span>
-				<ul>
-					<li><a href="https://www.facebook.com/ranveerritesh"
-							target="_blank">Facebook</a>
-					<li><a href="https://www.instagram.com/ranveerritesh"
-							target="_blank">Instagram</a>
-					<li><a href="https://www.linkedin.com/in/ranveeriitkgp"
-							target="_blank">LinkedIn</a>
-				</ul>
+		<tr>
+			<td style="border: 0;"><span
+					style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Social</u> <u>Media</u> <u>Profiles:</u></i></span></th>
+			<td style="border: 0;"><span
+					style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Coding</u> <u>Profiles:</u></i></span></th>
+			<td style="border: 0;"><span
+					style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
+						<u>Contact</u> <u>Information:</u></i></span></th>
+		</tr>
+		<tr>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://www.facebook.com/ranveerritesh" target="_blank">Facebook</a>
 			</td>
-			<td style="border: 0;">
-				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
-						<u>Coding Profiles:</u></i></span>
-				<ul>
-					<li><a href="https://codeforces.com/profile/ranveerraj"
-							target="_blank">Codeforces</a>
-					<li><a href="https://www.codechef.com/users/ranveerraj"
-							target="_blank">CodeChef</a>
-					<li><a href="https://github.com/ranveer-raj" target="_blank">Github</a>
-				</ul>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://codeforces.com/profile/ranveerraj" target="_blank">Codeforces</a>
 			</td>
-			<td style="border: 0;">
-				<span style="color:#CCDD00; font-family:'Old Standard TT'; font-size:29px"> <i>
-						<u>Contact Information:</u></i></span>
-				<ul>
-					<li>Email: <i><span
-								style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
-					<li>Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
-				</ul>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li>Email: <i><span style="color:#FF90CB">ranveerraj@kgpian.iitkgp.ac.in</span></i>
+			</td>
+		</tr>
+		<tr>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://www.instagram.com/ranveerritesh" target="_blank">Instagram</a>
+			</td>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://www.codechef.com/users/ranveerraj" target="_blank">CodeChef</a>
+			</td>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li>Email: <i><span style="color:#FF90CB">ranveeriitkgp@gmail.com</span></i>
+			</td>
+		</tr>
+		<tr>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://www.linkedin.com/in/ranveeriitkgp" target="_blank">LinkedIn</a>
+			</td>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li><a href="https://github.com/ranveer-raj" target="_blank">Github</a>
+			</td>
+			<td style="border: 0; padding: 0px; padding-left: 20px;">
+				<li>Phone: <span style="color:#FF90CB">+91 9304753347</span>
 			</td>
 		</tr>
 	</table>
